--- a/nima/index.html
+++ b/nima/index.html
@@ -9,6 +9,8 @@
 <body>
     <!-- Page 1: Home / Landing Page -->
     <section id="home" class="page active">
+        <a href="admin.html" class="admin-link" title="Manage Photos">⚙️</a>
+        
         <div class="floating-petals">
             <div class="petal"></div>
             <div class="petal"></div>
@@ -17,7 +19,7 @@
             <div class="petal"></div>
         </div>
         
-        <div class="content">
+        <div class="content"></div>
             <div class="heart-animation">❤️</div>
             <h1 class="main-title">To My Beautiful Nima,<br>Happy Valentine's Day 💕</h1>
             <h2 class="subtitle">A Celebration of Us</h2>
